type: fix - fix in css/styles.css to hide scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body {
     flex-direction: column;
 }
 
+
 /**** NAVBAR ****/
 #navbar {
     background-color: #fff;
@@ -379,4 +380,16 @@ body {
 
 #legal-disclosure {
     margin-bottom: 30px;
+}
+
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+    display: none;
+  }
+  
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
